integrated corrections by @biancasama

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -81,7 +81,7 @@ Thus, the system acts also as a reputation builder.
 
 \paragraph{Transparency and re-usability of the records.} The peer-review history, including authors' replies and editors' recommendations, should be openly and permanently accessible to the community (in the form of 'open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[5]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare}  and \emph{Peerage of Science}, peer-reviews in Ants-Review will be transferable across journals (like in 'cascading' or 'portable peer-reviews').
 
-\paragraph{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a decentralized content-addressable, peer-to-peer protocol which guarantees data immutability and unique file identification.
+\paragraph{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS}, a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data immutability and unique file identification via cryptographic hashes.
 \newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system still engages into maintaining the privacy of both authors and reviewers in a double-blind approach.
 
 \paragraph{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. \newline An interesting addition would be to introduce Quadratic Voting (QV) \cite{QVWeyl} for the reviews' evaluation. QV replaces the discrete concept of one-person-one-vote with the non-linear one of n vote at the cost of $n^2$ and is optimal in the context of multiple choices. If we consider scientific outputs as public goods, then the community can vote (with voting tokens) 'how much they care' for a specific peer-review. A rank of peer-reviews would result from the voting process, with a more fine-graded distribution that might reflect issues that have a high value to few people and low value to more people. \newline Finally, it's conceivable that the members of the community participate to the share of the tokens by voting to the best peer-reviews. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
@@ -110,9 +110,9 @@ In the following sections we describe the architecture of the system and its bui
 \end{itemize}
 
 \subsubsection{AntsReview}
-AntsReview (See Figure \ref{fig:contracts}) is the core of the smart contracts written in \emph{Solidity}\footnote[6]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, an object-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine, deployed on Ethereum Rinkeby's Testnet\footnote[7]{\emph{Rinkeby Testnet}.\textsc{URL:}https://rinkeby.etherscan.io.}. It implements a bounty-like system where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}, where she have to complete a series of required tasks that are essential to creating a transparent and openly accessible AntReview:
+AntsReview (See Figure \ref{fig:contracts}\textbf{a}) is the core of the smart contracts written in \emph{Solidity}\footnote[6]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, an object-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine, deployed on Ethereum Rinkeby's Testnet\footnote[7]{\emph{Rinkeby Testnet}.\textsc{URL:}https://rinkeby.etherscan.io.}. It implements a bounty-like system where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}, where she have to complete a series of required tasks that are essential to creating a transparent and openly accessible AntReview:
 \begin{itemize}
-  \item to upload the file containing the requirements of the peer-review and the paper into IPFS\cite{IPFS}, a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet, and specify the IPFS Hash to be stored in the Ethereum Blockchain as \emph{proof of existence}, a notarization process by wich a document hash is timestamped into the block of Ethereum where the transaction take place, that allow manual verification of the existence of the document.
+  \item to upload the file containing the requirements of the peer-review and the paper into IPFS\cite{IPFS} and specify the IPFS Hash to be stored in the Ethereum Blockchain as \emph{proof of existence}, a notarization process by wich a document hash is timestamped into the block of Ethereum where the transaction take place, that allow manual verification of the existence of the document.
   \item to specify a deadline in the form of a unix timestamp after which the fulfillment will no longer be accepted.
   \item to specify the amount of Ether for the reward that will be transferred from Alice to the contract.
 \end{itemize}
@@ -129,11 +129,11 @@ Access management of the Ants-Review protocol is defined and controlled by AntsR
 \newline The paper and peer-review documents will be included into a Merkle Tree by hashing the data using \emph{keccak256}, a cryptographic hashing algorithm available in Solidity.
 
 \subsubsection{Tokenomics}
-AntsReview integrates a few ERC20 tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
+AntsReview integrates a few \emph{ERC20}\footnote[8]{\emph{EIP 20}.\textsc{URL:}\url{https://eips.ethereum.org/EIPS/eip-20}.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
 \newline ANTS, is the primary protocol ERC20 token and can be staked into an AntReview.
 \newline ANTS is implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
 \newline zkANTS, is a wrapper of ANTS that will be used inside the protocol to allow private transactions among the agents, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters (members of Ants-Review Community).
-\newline zkANTS will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token, that follows the EIP-1724 standard \footnote[9]{\url{https://github.com/ethereum/EIPs/issues/1724.}} will be used as template to build an AZTEC-compatible asset.
+\newline zkANTS will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token, that follows the EIP-1724 standard \footnote[9]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}} will be used as template to build an AZTEC-compatible asset.
 \newline To optimize and scale transactions, AZTEC Protocol ZK-SNARKs, will be extended in the future to PLONK \cite{PLONK} to collapse the gas costs of private transactions.
 
 \subsubsection{Privacy}
@@ -148,7 +148,7 @@ EOA in Ethereum are controlled by private key. An user can send messages from an
 \newline To avoid that, Ants-Review will implement zkANTS, an Ant token wrapped into AZTEC Protocol. In the future zkANTS could leverage on zkSNARKS and PLONK, allowing private transactions in the system to maintain the privacy and anonymity of Peer-Reviewers.
 \newline The AZTEC Protocol was conceived to enable privacy on public blockchains. It uses a series of zero-knowledge proofs (ZK-SNARKs) and homomorphic encryption to validate encrypted transactions.
 \newline ZK-SNARKs (Zero-Knowledge Succinct Non-Interactive Argument of Knowledge) \cite{ZKSNARKs} refers to a proof construction where one can prove possession of certain information, like a secret key, without revealing that information, and without any interaction between prover and verifier.
-\newline Future developments will investigate viable solutions, for scaling the system, like ZK-Rollups by AZTEC Protocol, one of the options being developed for a type of layer 2 construction that runs on top of Ethereum to improve scalability. This will enable smart contracts to run  at scale with quasi-instant transactions while still being secured by Ethereum.
+\newline Future developments will investigate viable solutions, for scaling the system, like \emph{ZK$^2$-Rollups}\footnote[10]{\emph{ZK-Rollups}.\textsc{URL:}\url{https://medium.com/aztec-protocol/aztec-fast-privacy-with-zk%C2%B2-rollup-7c742f45457}.} by AZTEC Protocol, one of the options being developed for a type of layer 2 construction that runs on top of Ethereum to improve scalability. This will enable smart contracts to run  at scale with quasi-instant transactions while still being secured by Ethereum.
 
 \section{Discussions}
 In this session we discuss future developments not yet implemented and implications of AntsReview.
