--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -148,7 +148,7 @@ EOA in Ethereum are controlled by private key. An user can send messages from an
 \newline To avoid that, Ants-Review will implement zkANTS, an Ant token wrapped into AZTEC Protocol. In the future zkANTS could leverage on zkSNARKS and PLONK, allowing private transactions in the system to maintain the privacy and anonymity of Peer-Reviewers.
 \newline The AZTEC Protocol was conceived to enable privacy on public blockchains. It uses a series of zero-knowledge proofs (ZK-SNARKs) and homomorphic encryption to validate encrypted transactions.
 \newline ZK-SNARKs (Zero-Knowledge Succinct Non-Interactive Argument of Knowledge) \cite{ZKSNARKs} refers to a proof construction where one can prove possession of certain information, like a secret key, without revealing that information, and without any interaction between prover and verifier.
-\newline Future developments will investigate viable solutions, for scaling the system, like ZK-Rollups by AZTEC Protocol, one of the options being developed for a type of layer 2 construction that runs on top of Ethereum to improve scalability. This will enable smart contracts to run  at scale with quasi-instant transactions while still being secured by Ethereum.
+\newline Future developments will investigate viable solutions, for scaling the system, like ZK-ZK Rollup by AZTEC Protocol, one of the options being developed for a type of layer 2 construction that runs on top of Ethereum to improve scalability. This will enable smart contracts to run  at scale with quasi-instant transactions while still being secured by Ethereum.
 
 \section{Discussions}
 In this session we discuss future developments not yet implemented and implications of AntsReview.
